--- a/books/84c7a272deb3845e8085/config.yaml
+++ b/books/84c7a272deb3845e8085/config.yaml
@@ -12,7 +12,7 @@ summary: |-
   ※以下で公開しているものと同一の内容です
   https://blog.ttskch.com/angular-todo/
 
-topics: [Angular, Firebase, Firestore, JavaScript, TypeScript]
+topics: [angular, firebase, firestore, javascript, typescript]
 published: true
 price: 0 # 有料の場合200〜5000
 chapters:
