--- a/books/a3800fc0912fbb/config.yaml
+++ b/books/a3800fc0912fbb/config.yaml
@@ -2,7 +2,7 @@ title: "API Platform実戦投入レシピ"
 summary: |-
   API Platform (https://api-platform.com/) は、Symfony + DoctrineをベースとするPHP製のオープンソースAPIフレームワークです。
   
-  簡単な設定を書くだけでSymfonyアプリにREST API（やGraphQL API）の機能を一瞬で追加ることができて非常に便利なのですが、2022年5月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面もあり、まだまだ日本国内でプロダクションに投入されている例を見聞きすることは少ない印象です。
+  簡単な設定を書くだけでSymfonyアプリにREST API（やGraphQL API）の機能を一瞬で追加することができて非常に便利なのですが、2022年5月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面もあり、まだまだ日本国内でプロダクションに投入されている例を見聞きすることは少ない印象です。
   
   本書では、Symfonyヘビーユーザーである筆者が実際の業務でSymfonyアプリ上でのREST APIの実装にAPI Platformを使ってみた経験をもとに、API Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介します。API Platformの実戦投入、あるいはその検討の一助になれば幸いです。
   
