--- a/books/a3800fc0912fbb/config.yaml
+++ b/books/a3800fc0912fbb/config.yaml
@@ -9,7 +9,7 @@ summary: |-
   本書で解説に使用するサンプルコードは、以下のリポジトリにて公開しています。
   https://github.com/ttskch/api-platform-example
   
-  ※本書で扱う内容はAPI Platformのv2.6を対象としています。現在の安定版はv3.1であり、メジャーバージョンアップの際に外部インターフェースが割と大きく変更になっているため、最新版に転用できない情報が多く含まれています。ご注意の上でお読みいただければ幸いです。（いずれ最新版向けの内容に更新したいと思ってはいます…）
+  ※本書で扱う内容はAPI Platformのv2.6を対象としています。2023年6月現在の安定版はv3.1であり、メジャーバージョンアップの際に外部インターフェースが割と大きく変更になっているため、最新版に転用できない情報が多く含まれています。ご注意の上でお読みいただければ幸いです。（いずれ最新版向けの内容に更新したいと思ってはいます…）
 
 topics: [php, symfony, api, rest, apiplatform]
 published: true
