feat: 🎸 rewrite API Platform Book for api-platform/core v3.1

--- a/books/a3800fc0912fbb/config.yaml
+++ b/books/a3800fc0912fbb/config.yaml
@@ -1,15 +1,15 @@
 title: "API Platform実戦投入レシピ"
 summary: |-
-  API Platform (https://api-platform.com/) は、Symfony + DoctrineをベースとするPHP製のオープンソースAPIフレームワークです。
+  API Platform (https://api-platform.com/) は、SymfonyをベースとするPHP製のWeb APIフレームワークです。
   
-  簡単な設定を書くだけでSymfonyアプリにREST API（やGraphQL API）の機能を一瞬で追加することができて非常に便利なのですが、2022年5月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面もあり、まだまだ日本国内でプロダクションに投入されている例を見聞きすることは少ない印象です。
+  簡単な設定を書くだけでSymfonyアプリにREST API（やGraphQL API）の機能を一瞬で追加することができて非常に便利なのですが、2023年9月現在、ある程度以上複雑なことをしようとすると途端にフレームワークについての深い理解が求められたり、痒いところに手が届かず強引なワークアラウンドが必要になったりするという面もあり、まだまだ日本国内でプロダクションに投入されている例を見聞きすることは少ない印象です。
   
-  本書では、Symfonyヘビーユーザーである筆者が実際の業務でSymfonyアプリ上でのREST APIの実装にAPI Platformを使ってみた経験をもとに、API Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介します。API Platformの実戦投入、あるいはその検討の一助になれば幸いです。
+  本書では、Symfony・API Platformともにヘビーユーザーである筆者が実際の業務でSymfonyアプリ上でのREST APIの実装にAPI Platformを使ってきた経験をもとに、API Platformの基本的な仕組みやよくあるユースケースで必要になるワークアラウンドについて包括的にご紹介します。API Platformの実戦投入、あるいはその検討の一助になれば幸いです。
   
   本書で解説に使用するサンプルコードは、以下のリポジトリにて公開しています。
   https://github.com/ttskch/api-platform-example
   
-  ※本書で扱う内容はAPI Platformのv2.6を対象としています。2023年6月現在の安定版はv3.1であり、メジャーバージョンアップの際に外部インターフェースが割と大きく変更になっているため、最新版に転用できない情報が多く含まれています。ご注意の上でお読みいただければ幸いです。（いずれ最新版向けの内容に更新したいと思ってはいます…）
+  ※本書で扱う内容はAPI Platformのv3.1を対象としています。
 
 topics: [php, symfony, api, rest, apiplatform]
 published: true
@@ -31,6 +31,4 @@ chapters:
   - "14"
   - "15"
   - "16"
-  - "17"
-  - "18"
 allow_override: true
